Proponowana wersja api.yml dla mikroserwisu chat_ms, ale bez paginacji - bardzo prosta wersja.
